<resources>
    <string name="app_name">WDITarot</string>

    <string name="new_deal_title">Nouvelle donne</string>
    <string name="deal_taker">Preneur</string>
    <string name="deal_bidding">Contrat</string>
    <string name="action_settings">Settings</string>
    <string name="deal_callee">Appel</string>
    <string name="deal_bonuses">Annonces</string>
    <string name="deal_lack">Misère</string>
    <string name="deal_handful">Poignée</string>
    <string name="deal_double_handful">Double</string>
    <string name="deal_triple_handful">Triple</string>
    <string name="attack">Attaque</string>
    <string name="defense">Défense</string>
    <string name="bid_take">Prise</string>
    <string name="bid_guard">Garde</string>
    <string name="bid_guard_without">Garde sans</string>
    <string name="bid_guard_against">Garde contre</string>
    <string name="heart">Coeur</string>
    <string name="diamond">Carreau</string>
    <string name="spade">Pique</string>
    <string name="club">Trêfle</string>
    <string name="deal_one_at_end">Petit au bout</string>
    <string name="deal_results">Résultats</string>
    <string name="deal_nb_oudlers">Nb bouts</string>
    <string name="deal_incomplete_data">Il manque des infos pour calculer les scores ...</string>
    <string name="choose_players_title">Joueurs</string>
    <string name="player">Joueur</string>
    <string name="add">Ajouter</string>
    <string name="validate">Valider</string>
    <string name="players_empty_name">Un nom de joueur ne peut pas être vide</string>
    <string name="players_dupplicate_name">Les noms des joueurs doivent être uniques</string>
    <string name="deal_dealer">Distributeur</string>
    <string name="deal_dealing">Distibution</string>
    <string name="deal_dummys">Mort(s)</string>
    <string name="show_scores_title">Scores</string>
</resources>
